# PartExa

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: codechecks.yml  coverage.yml  doxygen.yml  indentation.yml  sphinx.yml  tests.yml
cmake/: CMakeLists.txt
cmake/macros/: CMakeLists.txt  print_partexa_header.cmake
cmake/modules/: FindSphinx.cmake
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/sphinx/: CMakeLists.txt  conf.py  index.rst
doc/sphinx/developer/: codeconventions.rst  developer.rst  documentation.rst
doc/sphinx/installation/: configuration.rst  dependencies.rst  installation.rst
include/partexa/base/: print_infos.h  revision.h.in
source/: dummy.cc
tests/: CMakeLists.txt  tests.h
tests/base/: CMakeLists.txt  print_partexa_header.cc  print_partexa_header.output
utilities/clang-format/: run-check-on-current-branch.sh  run-check-on-current-head.sh  run-check-on-indexed-files.sh
utilities/configure_scripts/: configure_dealii.sh  configure_partexa.sh
utilities/license-header/: check-all-files.sh  check-changed-files.sh  check-license-header.sh  helper-functions.sh  run-check-on-current-branch.sh  run-check-on-current-head.sh  run-check-on-indexed-files.sh  template-license-header
